--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Conceptual</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/84c82cce27.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-            <div class="container">
+    <header class="navigation">
+        <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-light shadow">
+            <div class="container py-2">
               <a class="navbar-brand" href="#">Bootstrap</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,27 +22,27 @@
                   <!-- <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li> -->
-                  <li class="nav-item">
+                  <li class="nav-item mx-3">
                     <a class="nav-link" href="#">Features</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mx-3">
                     <a class="nav-link" href="#">Download</a>
                   </li>
-                  <!-- <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li> -->
+                  <li class="nav-item mx-3">
+                    <a class="nav-link btn rounded-pill text-white background-gradiant px-3" href="#"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg >Send Feedback</a>
+                  </li>
                 </ul>
               </div>
             </div>
           </nav>
     </header>
     <main>
-        <section>
+        <section class="banner">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <div> 
-                            <h1 class="display-2 fw-bold text-primary">Showcase your app beautifully.</h1>
+                        <div class="d-flex flex-column justify-content-center h-100"> 
+                            <h1 class="display-2 fw-bold text-blue">Showcase your app beautifully.</h1>
                             <p class="fs-5">Launch your mobile app landing page faster with this free, open source theme from Start Bootstrap!</p>
                             <div>
                                 <a href="">
@@ -53,7 +55,58 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="/img/banner.png" alt="">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="/img/banner.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pt-5">
+            <div class="background-gradiant d-flex flex-column justify-content-center align-items-center text-white py-5">
+                <h1 class="text-center w-50 mb-3">"An intuitive solution to a common problem that we all face, wrapped up in a single app!"</h1>
+                <img height="50px" src="/img/tnw-logo.svg" alt="">
+            </div>
+        </section>
+        <section id="feature">
+            <div class="container">
+                <div class="row py-4">
+                    <div class="col-md-5 py-4">
+                        <div>
+                            <img src="/img/phone.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="border my-2 p-3 d-flex flex-column align-items-center">
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
+                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="border my-2 p-3 d-flex flex-column align-items-center">
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
+                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="border my-2 p-3 d-flex flex-column align-items-center">
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
+                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="border my-2 p-3 d-flex flex-column align-items-center">
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
+                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
