--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li> -->
                   <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#feature">Features</a>
                   </li>
                   <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">Download</a>
+                    <a class="nav-link" href="#download">Download</a>
                   </li>
                   <li class="nav-item mx-3">
                     <a class="nav-link btn rounded-pill text-white background-gradiant px-3" href="#"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg >Send Feedback</a>
@@ -55,8 +55,8 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="/img/banner.png" alt="">
+                        <div class="d-flex justify-content-center align-items-center py-3">
+                            <img class="img-fluid" src="/img/banner.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -71,12 +71,12 @@
         <section id="feature">
             <div class="container">
                 <div class="row py-4">
-                    <div class="col-md-5 py-4">
-                        <div>
-                            <img src="/img/phone.png" alt="">
+                    <div class="col-lg-5 col-md-12">
+                        <div class="py-4 text-center">
+                            <img class="img-fluid" src="/img/phone.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="border my-2 p-3 d-flex flex-column align-items-center">
@@ -87,22 +87,22 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="border my-2 p-3 d-flex flex-column align-items-center">
-                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
-                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                                    <h3 class="text-center my-3">Flexible Use</h3>
                                     <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="border my-2 p-3 d-flex flex-column align-items-center">
-                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
-                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path></svg>
+                                    <h3 class="text-center my-3">Free to Use</h3>
                                     <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="border my-2 p-3 d-flex flex-column align-items-center">
-                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
-                                    <h3 class="text-center my-3">Device Mockups</h3>
+                                    <svg width="80" class="background-gradiant rounded-circle text-white p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path></svg>
+                                    <h3 class="text-center my-3">Open Source</h3>
                                     <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
                                 </div>
                             </div>
@@ -111,10 +111,54 @@
                 </div>
             </div>
         </section>
+        <section class="new-web-design my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="d-flex flex-column justify-content-center h-100">
+                            <h1 class="display-4 fw-bold text-blue">Enter a new age of web design</h1>
+                            <p class="fs-5 text-muted">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="py-5">
+                            <img class="rounded-circle img-fluid" src="/img/web-design.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="stop-writing">
+                <div class="container h-100">
+                    <div class="row h-100">
+                        <div class="col-lg-6 col-md-12">
+                            <div class=" d-flex flex-column justify-content-center h-100 align-items-start">
+                                <h1 class="display-2 text-white">Stop waiting. Start building.</h1>
+                                <a href="" class="btn btn-outline-light rounded-pill py-3 px-4">Download for Free</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section id="download" class="background-gradiant py-5">
+            <div class="d-flex flex-column justify-content-center align-items-center py-5">
+                <h1 class="text-white">Get the app now!</h1>
+                <div>
+                    <a href="">
+                        <img src="/img/app-store.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="/img/google-play.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <footer class="bg-dark py-3 text-center">
+            <small class="text-white">
+                &copy; Your Website 2022. All Rights Reserved.
+            </small>
+        </footer>
     </main>
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
